--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+body{
+  font-family: 'Moul', serif;
+}
+.textShadow{
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.55);
+-webkit-text-stroke-width: 1.2px;
+-webkit-text-stroke-color: #000;
+color: white;
+}
+
+.evoImg{
+  height: 8vw;
+}
